--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 <p>tjis is the first repo to be pushed to github</p>
+<p>this code to chek if a new branch is working</p>
 
 </body>
 </html>
